# mangofetch-cli

./: Cargo.toml  README.md
.jules/: bolt.md
.trunk/: actions  notifications  tools  trunk.yaml
.trunk/plugins/: trunk
mangofetch-cli/: Cargo.toml  build.rs
mangofetch-cli/scratch/: process_dune.py
mangofetch-cli/src/: engine.rs  formatting.rs  main.rs  output.rs  reporter.rs
mangofetch-cli/tests/: integration_tests.rs
mangofetch-core/: Cargo.toml
mangofetch-core/src/core/: clipboard.rs  cookie_parser.rs  dependencies.rs  direct_downloader.rs  errors.rs  ffmpeg.rs  filename.rs  hls_downloader.rs  http_client.rs  log_hook.rs  logger.rs  media_processor.rs  mod.rs  pokemon_names.rs  process.rs  random_names.rs  registry.rs  test_hls.rs  ytdlp.rs
mangofetch-core/src/core/manager/: download_log.rs  mod.rs  path_limits.rs  plugin_host.rs  plugin_manager.rs  queue.rs  recovery.rs
mangofetch-core/src/models/: media.rs  settings.rs
mangofetch-core/tests/: queue_tests.rs
mangofetch-gui/: Cargo.toml
mangofetch-gui/src/: lib.rs  widgets.rs
mangofetch-plugin-sdk/: Cargo.toml
mangofetch-plugin-sdk/src/: host.rs  manifest.rs  plugin.rs
