[package]
name = "mangofetch-core"
version = "0.7.3"
edition = "2021"
description = "Core download engine for MangoFetch"
authors = ["Jules Martins <fearlesslymediagroup@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/mangofetch-cli"
readme = "../README.md"
keywords = ["mangofetch", "downloader", "engine", "video"]
categories = ["multimedia"]

[lib]
name = "mangofetch_core"

[features]
default = ["platforms"]
platforms = ["librqbit", "which"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "stream",
    "http2",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"
librqbit = { version = "8.1.1", optional = true, default-features = false, features = [
    "rust-tls",
] }
which = { version = "6", optional = true }
rand = "0.8"
aws-lc-rs = { version = "1.17.0", features = ["prebuilt-nasm"] }
libloading = "0.8"
mangofetch-plugin-sdk = { path = "../mangofetch-plugin-sdk", version = "0.7.3" }
thiserror = "2.0.18"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
httpmock = "0.8.3"
